--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,5 @@
-Django==1.11.11
-django-mssql==1.8
-django-pyodbc-azure==1.11.9.0
-djangorestframework==3.7.1
-mysqlclient==1.3.12
-pyodbc==4.0.22
+dj-database-url==0.5.0
+gunicorn==19.7.1
+psycopg2==2.7.4
 pytz==2017.2
-virtualenv==15.1.0
-wfastcgi==3.0.0
+whitenoise==3.3.1
